Fix overflow behavior in the hint column
- Allow hints to overflow in the x-axis.
- Slightly reduce the padding in the hint column.
- Fix the usage of the .e-column classes to add the proper margin
  between grid columns.

--- a/packages/core/src/components/Hints.less
+++ b/packages/core/src/components/Hints.less
@@ -3,8 +3,7 @@
   top: 0;
   height: 100%;
   max-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .e-hints__hint {
